--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <script type="module" src="app.js"></script>
+    <title>Sahosoft Solutions - Kashif</title>
 </head>
 <body>
-    
+        <h1>Module Import Export in React project !</h1>
 </body>
 </html>
